modules/alb/main.tf
resource "aws_lb" "main" {
  name               = "${var.app_name}-${terraform.workspace}-tf"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.main.id]
  subnets            = var.subnet_ids

  enable_deletion_protection = true

#   access_logs {
#     bucket  = aws_s3_bucket.lb_logs.bucket
#     prefix  = "test-lb"
#     enabled = true
#   }

  tags = {
    Environment = terraform.workspace
  }
}

resource "aws_security_group" "main" {
  name        = "${var.app_name}_${terraform.workspace}_alb_sg"
  description = "Allow TLS inbound traffic"
  vpc_id      = var.vpc_id

  dynamic "ingress" {
    for_each = var.web_sg_ingress
    content {
      description = "TLS from VPC"
      from_port   = ingress.value.port
      to_port     = ingress.value.port
      protocol    = ingress.value.protocol
      cidr_blocks = ingress.value.cidr_blocks
    }
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "${var.app_name}_${terraform.workspace}_alb_sg"
  }
}

resource "aws_lb_listener" "main" {
  load_balancer_arn = aws_lb.main.arn
  port              = "80"
  protocol          = "HTTP"
#   ssl_policy        = "ELBSecurityPolicy-2016-08"
#   certificate_arn   = "arn:aws:iam::187416307283:server-certificate/test_cert_rab3wuqwgja25ct3n4jdj2tzu4"

  default_action {
    type             = "forward"
    target_group_arn = var.default_tg_arn
  }
}

variable "listner_rules" {
  type = map(object({
      priority = number
      target_group_arn = string
      path_pattern = list(string)
  }))
}

resource "aws_lb_listener_rule" "static" {
  for_each = var.listner_rules
  listener_arn = aws_lb_listener.main.arn
  priority     = each.value.priority

  action {
    type             = "forward"
    target_group_arn = each.value.priority.target_group_arn
  }

  condition {
    path_pattern {
      values = each.value.priority.path_pattern
    }
  }
}
